<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_problems"
            android:icon="@drawable/ic_numbers"
            android:title="@string/drawer_problems" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_white"
            android:title="@string/drawer_profile" />

    </group>


    <group android:id="@+id/menu_help">
        <item android:title="@string/drawer_help_title">
            <menu>
                <item
                    android:id="@+id/nav_manual"
                    android:icon="@drawable/ic_info"
                    android:title="@string/drawer_help" />
            </menu>
        </item>
    </group>

</menu>