<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".views.activities.SolveActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:elevation="1dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintTop_toBottomOf="@id/fab_menu"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:maxLines="5"
                    android:singleLine="false"
                    android:text="@string/problem"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/message">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/answer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_edit_black_24dp"
                        android:hint="@string/answer"
                        android:inputType="number"
                        android:maxLength="4"
                        android:drawableRight="@drawable/ic_edit_black_24dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/textLayout"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin">

                    <RadioButton
                        android:id="@+id/radio_one"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Opcion1" />

                    <RadioButton
                        android:id="@+id/radio_two"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Opcion2" />

                    <RadioButton
                        android:id="@+id/radio_three"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Opcion3" />
                </RadioGroup>

                <TextView
                    android:id="@+id/result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/not_answered"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayout"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin" />

                <ImageView
                    android:id="@+id/example_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:contentDescription="@string/objeto_del_problema" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <com.rafaelcosio.mathhelper.utils.StepperIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/navigation"
            app:layout_constraintEnd_toEndOf="@id/navigation"
            app:layout_constraintStart_toStartOf="@id/navigation" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_back"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:drawableTop="@drawable/ic_arrow_back_black_24dp"
                android:enabled="false"
                android:text="@string/bottom_back" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:format="%s"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/score"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btn_forward"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/windowBackground"
                android:drawableTop="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/bottom_forward" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="46dp"
            android:layout_height="213dp"
            android:elevation="2dp"
            app:layout_constraintBottom_toTopOf="@id/fab"
            app:layout_constraintEnd_toEndOf="@id/fab"
            app:layout_constraintStart_toStartOf="@id/fab"
            app:menu_fab_size="mini"
            fab:menu_colorNormal="@color/colorAccent"
            fab:menu_labels_hideAnimation="@anim/jump_to_down"
            fab:menu_labels_showAnimation="@anim/jump_from_down"
            fab:menu_labels_style="@style/MenuLabelsStyle">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/button_try_again"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_undo_black_24dp"
                app:fab_label="@string/try_again" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/button_pause_time"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pause_black_24dp"
                app:fab_label="@string/pause_time" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/button_reveal_answer"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_visibility_black_24dp"
                app:fab_label="@string/reveal_answer" />


        </com.github.clans.fab.FloatingActionMenu>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab"
            android:elevation="2dp"
            style="@style/FabStyle"
            app:fab_colorRipple="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/ic_check_black_24dp"
            app:fab_label="@string/verificar_respuesta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/indicator"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>